WiP: Ngrx store completely redone; Fixed bug with 3 monolithic stores, and created one with selectors; Api and client better integration

--- a/src/app/components/last-block/last-block.component.html
+++ b/src/app/components/last-block/last-block.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let block of (appState | async).blocks.slice(0,1)" class="card events-card">
+<div *ngFor="let block of (blocksState | async).blocks.slice(0,1)" class="card events-card">
   <div class="card-table">
     <div class="content">
       <article class="message">
