--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -3,7 +3,7 @@
     <!-- <h1 class="title header-title" [appBgHighlight]="'orange'" defaultColor="transparent">
       Coris Explorer 
     </h1> -->
-    <h2 class="subtitle header-subtitle" @fadeInAnimation>{{(appState | async).blocks[0]?.header.chain_id}}</h2>
+    <h2 class="subtitle header-subtitle" @fadeInAnimation>{{(blocksState | async).blocks[0]?.header.chain_id}}</h2>
   </div>
   <!-- <app-universal-search-bar (onSelectedOption)="onSelectedFilter($event)"></app-universal-search-bar> -->
   <div class="row proposer-row">
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div @fadeInAnimation class="container">
-    <span *ngIf="(appState | async).blocks.length; else elseBlock">
+    <span *ngIf="(blocksState | async).blocks.length; else elseBlock">
       <app-carousel></app-carousel>
     </span>
   </div>
