--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -1,4 +1,4 @@
-<!-- <app-chart-cards></app-chart-cards> -->
+<app-chart-cards></app-chart-cards>
 <div class="row main-row" *ngIf="true; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
