--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -12,7 +12,8 @@
     <ng-container matColumnDef="title" sticky>
       <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-code"></i>&nbsp;Title</th>
       <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="top">
-        {{proposal.proposal_content.value.title | slice:0:20}}...
+        <!-- <span style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}}...</span> -->
+        <mdb-badge color="pink" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}} ...</mdb-badge>
       </td>
     </ng-container>
 
@@ -63,7 +64,7 @@
         </td>
     </ng-container>
 
-    <ng-container matColumnDef="expandedDetail">
+    <!-- <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let proposal" [attr.colspan]="displayedColumns.length">
         <div
             class="proposal-detail"
@@ -77,14 +78,12 @@
           </div>
         </div>
       </td>
-    </ng-container>
+    </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let proposal; columns: displayedColumns;"
-        [appBgHighlight]="'#d1d1d1'" defaultColor="#ffffff"
-        [class.example-expanded-row]="expandedElement === proposal"
-        (click)="expandedElement = expandedElement === proposal ? null : proposal">
+        [appBgHighlight]="'#d1d1d1'" defaultColor="#ffffff">
     </tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="proposal-detail-row"></tr>
+    <!-- <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="proposal-detail-row"></tr> -->
   </table>
 </div>
