--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -32,7 +32,7 @@
       <ng-container matColumnDef="hash" sticky>
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>&nbsp;Hash</th>
         <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
-          <span>
+          <!-- <span>
             {{tx.hash | slice:0:15 }}... 
             <i 
               class="ion-ios-copy copy-button" 
@@ -42,7 +42,17 @@
               (click)="onCopySucceess()"
               mdbTooltip="copy to clipboard" placement="left">
             </i>
-          </span>
+          </span> -->
+          <mdb-badge color="pink">{{tx.hash | slice:0:15 }}... 
+          </mdb-badge>&nbsp;
+          <i 
+          class="ion-ios-copy copy-button" 
+          style="cursor: pointer;" 
+          ngxClipboard 
+          [cbContent]="tx.hash" 
+          (click)="onCopySucceess()"
+          mdbTooltip="copy to clipboard" placement="left">
+          </i>
           </td>
       </ng-container>
 
@@ -200,7 +210,7 @@
                             {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
                           </span>
                           <ng-template #elseDelegatorWithdraw>{{ tx.msg[i].value.delegator_address }}</ng-template>
-                        </a> 
+                        </a>&nbsp;
                         <mdb-badge default="true">withdrew rewards</mdb-badge>&nbsp;
                         from 
                         <br>
@@ -306,7 +316,7 @@
                       <mdb-badge danger="true">Error</mdb-badge>&nbsp;{{ tx.error|titlecase }}
                     </span>
                   </mdb-card-text>
-                  <button mdbBtn color="indigo" rounded="true" size="sm" mdbWavesEffect 
+                  <button mdbBtn color="pink" rounded="true" size="sm" mdbWavesEffect 
                   style="cursor: pointer;" (click)="openTxDialog(tx)" class="detail-button">Detail</button>
                 </mdb-card-body>
               </mdb-card>
