--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -137,7 +137,7 @@
                           *ngIf="validator.account?.tokens; else balanceElseBlock" 
                           matTooltipPosition="above"
                       >
-                        {{validator.account?.tokens/1e6 | number:'.2-2'}}
+                        {{validator.account.tokens/1e6 | number:'.2-2'}}
                       </span>
                       <ng-template #balanceElseBlock>
                         0
