--- a/src/app/components/block/block.component.scss
+++ b/src/app/components/block/block.component.scss
@@ -6,3 +6,30 @@
 .card-1 {
   margin-bottom: 20px;
 }
+
+.card-title {
+  margin: 0;
+  font-size: 130%;
+}
+
+mdb-card-title {
+  color: white;
+}
+
+mdb-card-header {
+  background-color: #3F51B5;
+}
+
+.glance-title {
+  margin: 0 !important
+}
+
+.copy-button {
+  color:#3F51B5;
+}
+
+.copy-button:hover,
+.copy-button:active {
+  color:#7986cb;
+  /* border-bottom: 1px solid transparent; */
+}
