--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -14,8 +14,9 @@
         </canvas>
       </div>
       <mdb-card-body class="text-center">
-        Block Time          
-        &nbsp;<mdb-icon fas icon="clock" class="ml-auto" mdbTooltip="Avg. block time(last 100)" placement="top"></mdb-icon>
+        <span mdbTooltip="Last 100 blocks" placement="top">
+          <i class="ion-ios-clock"></i>&nbsp;Block Time  
+        </span>        
       </mdb-card-body>
     </div>
   </div>
@@ -34,8 +35,7 @@
       </canvas>
       </div>
       <mdb-card-body class="text-center">
-        Commission Distribution
-        &nbsp;<mdb-icon fas icon="percent" class="ml-auto" mdbTooltip="Commission distribution" placement="top"></mdb-icon>
+        <i class="ion-stats-bars"></i>&nbsp;Commission Distribution 
       </mdb-card-body>
     </div>
   </div>
@@ -49,8 +49,7 @@
         </canvas>
       </div>
       <mdb-card-body class="text-center">
-        Voting Power
-        &nbsp;<mdb-icon fas icon="chess-knight" class="ml-auto" mdbTooltip="Voting power" placement="top"></mdb-icon>
+        <i class="ion-flash"></i>&nbsp;Voting Power
       </mdb-card-body>  
     </div>  
   </div>
