--- a/src/app/components/validator/validator.component.scss
+++ b/src/app/components/validator/validator.component.scss
@@ -61,6 +61,10 @@ mdb-card-title i {
   font-size: 130%;
 }
 
-.card-title h1 {
-  color: black;
+mdb-card-title {
+  color: white;
+}
+
+mdb-card-header {
+  background-color: #3F51B5;
 }
