--- a/src/app/components/governance/gov-detail/gov-detail.component.scss
+++ b/src/app/components/governance/gov-detail/gov-detail.component.scss
@@ -49,5 +49,16 @@ li {
 .card-title {
     margin: 0;
     font-size: 130%;
-    font-weight: bold;
+}
+
+mdb-card-title {
+    color: white;
+}
+  
+mdb-card-header {
+  background-color: #3F51B5;
+}
+
+.glance-title {
+    margin: 0 !important
 }
