--- a/src/app/components/tx/tx.component.html
+++ b/src/app/components/tx/tx.component.html
@@ -10,7 +10,7 @@
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Hash
-                  <span class="badge badge-primary badge-pill">
+                  <h3 class="glance-title"><mdb-badge color="pink">
                     {{tx.hash | slice:0:15 }}... 
                     <i 
                       class="ion-ios-copy copy-button" 
@@ -20,7 +20,7 @@
                       (click)="onCopySucceess()"
                       mdbTooltip="copy to clipboard" mdbTooltipPosition="above">
                     </i>
-                  </span>
+                  </mdb-badge></h3>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Status
@@ -34,30 +34,28 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Height
-                  <span class="badge badge-primary badge-pill">{{tx.height}}</span>
+                  <h3 class="glance-title"><mdb-badge color="pink">{{tx.height}}</mdb-badge></h3>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Timestamp
-                    <span class="badge badge-primary badge-pill">{{tx.details?.timestamp | ago | async}}</span>
+                    <h3 class="glance-title"><mdb-badge color="pink">{{tx.details?.timestamp | ago | async}}</mdb-badge></h3>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Fee
-                  <span class="badge badge-primary badge-pill">
-                      {{ 
-                        tx.details?.tx.value.fee.amount ?
-                        tx.details.tx.value.fee.amount[0].amount : '0' 
-                      }} uatom
-                  </span>
+                  <h3 class="glance-title"><mdb-badge color="pink">
+                    {{ 
+                      tx.details?.tx.value.fee.amount ?
+                      tx.details.tx.value.fee.amount[0].amount : '0' 
+                    }} uatom
+                  </mdb-badge></h3>
                 </li>
                 <li *ngIf="tx.gasUsed && tx.gasUsed" class="list-group-item d-flex justify-content-between align-items-center">
                   Gas (used/wanted)
-                  <span class="badge badge-primary badge-pill">
-                    {{ tx.gasUsed }}/{{ tx.gasWanted }}
-                  </span>
+                  <h3 class="glance-title"><mdb-badge color="pink">{{ tx.gasUsed }}/{{ tx.gasWanted }}</mdb-badge></h3>
                 </li>
                 <li *ngIf="tx.memo.length > 0" class="list-group-item d-flex justify-content-between align-items-center">
                   Memo
-                  <span class="badge badge-primary badge-pill">{{ tx.memo }}</span>
+                  <h3 class="glance-title"><mdb-badge color="pink">{{ tx.memo }}</mdb-badge></h3>
                 </li>
             </ul>
         </mdb-card-body>
@@ -73,82 +71,75 @@
               <span *ngFor="let action of tx.action; index as i">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Type
-                  <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
+                  <h3 class="glance-title"><mdb-badge color="pink">{{ action | titlecase}}</mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.from_address" class="list-group-item d-flex justify-content-between align-items-center">
                   From
-                  <span 
-                      class="badge badge-primary badge-pill"
-                      style="cursor:pointer;" 
-                      (click)="openTxsListDialog(tx.msg[i].value.from_address)">
+                  <h3 class="glance-title"><mdb-badge style="cursor:pointer;" 
+                    (click)="openTxsListDialog(tx.msg[i].value.from_address)"color="pink">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.from_address ) : false; else elseSender">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.from_address )}}
-                    </span>
-                    <ng-template #elseSender>{{ tx.msg[i].value.from_address }}</ng-template>
-                  </span>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.from_address )}}
+                      </span>
+                      <ng-template #elseSender>{{ tx.msg[i].value.from_address }}</ng-template>
+                  </mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.to_address" class="list-group-item d-flex justify-content-between align-items-center">
                   To
-                  <span class="badge badge-primary badge-pill"
-                        style="cursor:pointer;" 
-                        (click)="openTxsListDialog(tx.msg[i].value.to_address)">
+                  <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
+                    (click)="openTxsListDialog(tx.msg[i].value.to_address)">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.to_address ) : false; else elseRecipient">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.to_address )}}
-                    </span>
-                    <ng-template #elseRecipient>{{ tx.msg[i].value.to_address }}</ng-template>
-                  </span>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.to_address )}}
+                      </span>
+                      <ng-template #elseRecipient>{{ tx.msg[i].value.to_address }}</ng-template>
+                  </mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.delegator_address" class="list-group-item d-flex justify-content-between align-items-center">
                   Delegator
-                  <span style="cursor:pointer;" 
-                        (click)="openTxsListDialog(tx.msg[i].value.delegator_address)" 
-                        class="badge badge-primary badge-pill">
+                  <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
+                    (click)="openTxsListDialog(tx.msg[i].value.delegator_address)">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) : false; else elseDelegator">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
-                    </span>
-                    <ng-template #elseDelegator>{{tx.msg[i].value.delegator_address}}</ng-template> 
-                  </span>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                      </span>
+                      <ng-template #elseDelegator>{{tx.msg[i].value.delegator_address}}</ng-template> 
+                  </mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.validator_address" class="list-group-item d-flex justify-content-between align-items-center">
                   Validator
-                  <span class="badge badge-primary badge-pill"
-                        (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"
-                        style="cursor: pointer">
+                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"
+                    style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_address ) : false; else elseValidator">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
-                    </span>
-                    <ng-template #elseValidator>{{tx.msg[i].value.validator_address}}</ng-template> 
-                  </span>
-                </li>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
+                      </span>
+                      <ng-template #elseValidator>{{tx.msg[i].value.validator_address}}</ng-template>
+                  </mdb-badge></h3>
+                </li><br *ngIf="action === 'withdraw delegator reward'">
 
                 <li *ngIf="tx.msg[i].value.validator_src_address" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   From
-                  <span class="badge badge-primary badge-pill"
-                        (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"
-                        style="cursor: pointer">
+                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"
+                    style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_src_address ) : false; else elseSrcValidator">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_src_address )}}
-                    </span>
-                    <ng-template #elseSrcValidator>{{tx.msg[i].value.validator_src_address}}</ng-template> 
-                  </span>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_src_address )}}
+                      </span>
+                      <ng-template #elseSrcValidator>{{tx.msg[i].value.validator_src_address}}</ng-template> 
+                  </mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.validator_dst_address" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   To
-                  <span class="badge badge-primary badge-pill"
-                        (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"
-                        style="cursor: pointer">
+                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"
+                    style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_dst_address ) : false; else elseDstValidator">
-                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_dst_address )}}
-                    </span>
-                    <ng-template #elseDstValidator>{{tx.msg[i].value.validator_dst_address}}</ng-template> 
-                  </span>
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_dst_address )}}
+                      </span>
+                      <ng-template #elseDstValidator>{{tx.msg[i].value.validator_dst_address}}</ng-template> 
+                  </mdb-badge></h3>
                 </li>
 
 
@@ -156,46 +147,44 @@
                   <li *ngFor="let input of tx.msg[i].value.inputs" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Sender
-                    <span class="badge badge-primary badge-pill"
-                          (click)="openTxsListDialog( input.address )"
-                          style="cursor: pointer;"> 
+                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openTxsListDialog( input.address )"
+                      style="cursor: pointer;">
                       <span *ngIf="(appState | async).valsMap.size 
                                     ? (appState | async).valsMap.has( input.address ) 
                                     : false; else elseInputMulti">
                         {{ (appState | async).valsMap.get( input.address )}}
                       </span>
                       <ng-template #elseInputMulti>{{ input.address }}</ng-template>
-                    </span>
+                    </mdb-badge></h3>
                   </li>
                   <li *ngFor="let output of tx.msg[i].value.outputs" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Recipient
-                    <span class="badge badge-primary badge-pill"
-                          (click)="openTxsListDialog( output.address )"
-                          style="cursor: pointer;"> 
+                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openTxsListDialog( output.address )"
+                      style="cursor: pointer;">
                       <span *ngIf="(appState | async).valsMap.size 
                                     ? (appState | async).valsMap.has( output.address ) 
                                     : false; else elseOutputMulti">
                         {{ (appState | async).valsMap.get( output.address )}}
                       </span>
                       <ng-template #elseOutputMulti>{{ output.address }}</ng-template>
-                    </span>
+                    </mdb-badge></h3>
                   </li>
                   <li *ngFor="let output of tx.msg[i].value.outputs; index as j" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Amount {{j+1}}:
-                    <span class="badge badge-primary badge-pill"> 
-                      {{ output.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM
-                    </span>
+                    <h3 class="glance-title"><mdb-badge color="pink">
+                        {{ output.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM
+                    </mdb-badge></h3>
                   </li>
                 </span>
 
                 <li *ngIf="tx.msg[i].value.amount" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   Amount
-                  <span class="badge badge-primary badge-pill">
-                    {{ ( tx.msg[i].value.amount.length ? tx.msg[i].value.amount[0].amount : tx.msg[i].value.amount.amount )/1e6 | number:".2-2" }}&nbsp;ATOM 
-                  </span>
+                  <h3 class="glance-title"><mdb-badge color="pink">
+                      {{ ( tx.msg[i].value.amount.length ? tx.msg[i].value.amount[0].amount : tx.msg[i].value.amount.amount )/1e6 | number:".2-2" }}&nbsp;ATOM 
+                  </mdb-badge></h3>
                 </li>
               </span>
             </ul>
