--- a/src/app/components/tx/tx.component.scss
+++ b/src/app/components/tx/tx.component.scss
@@ -29,3 +29,15 @@ color: #F44336;/*#00796b;*/
   margin: 0;
   font-size: 130%;
 }
+
+mdb-card-title {
+  color: white;
+}
+
+mdb-card-header {
+  background-color: #3F51B5;
+}
+
+.glance-title {
+  margin: 0 !important
+}
