--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- First column -->
         <div class="col-lg-6 col-md-12">
-          <mdb-card class="testimonial-card mb-5">
+          <mdb-card class="testimonial-card mb-3 mat-elevation-z8">
                 <!--Bacground color-->
                 <div class="card-up indigo">
                 </div>
@@ -26,7 +26,7 @@
                     <i class="fas fa-quote-left"></i>&nbsp;{{ validator.description.details }}
                   </p>
           
-                  <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-4 pills-secondary white mb-2'" [contentClass]="'card'">
+                  <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-2 pills-pink white mb-2'" [contentClass]="'card'">
                     <mdb-tab heading="Operator address">
                       <div class="row">
                         <div class="col-12">
@@ -129,7 +129,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-4 col-12">
-                    <mdb-badge color="lime Commision Max">
+                    <mdb-badge color="lime">
                         Balance
                     </mdb-badge>
                     <h4>
@@ -174,7 +174,7 @@
                   </div>
                   <div class="col-sm-4 col-12">
                     <mdb-badge color="brown">
-                      Commision Max
+                      Commision Max Rate
                     </mdb-badge>
                     <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
                   </div>
