chart styling and other minor fixes

--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <!-- Block Time Chart -->
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header indigo">
@@ -8,6 +9,7 @@
           [chartType]="blockChartType"
           [datasets]="blockChartDatasets"
           [labels]="blockChartLabels"
+          [options]="blockChartOptions"
           [legend]="true"
           [colors]="blockChartColors">
         </canvas>
@@ -19,6 +21,8 @@
       </mdb-card-body>
     </div>
   </div>
+
+  <!-- Commission Chart -->
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header blue-gradient">
@@ -38,6 +42,8 @@
       </mdb-card-body>
     </div>
   </div>
+
+  <!-- Voting Power Chart -->
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header mdb-color lighten-4">
