--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -21,22 +21,22 @@
           <li>
             <ul class="social">
               <li>
-                <a class="icons-sm fb-ic">
+                <a class="icons-sm fb-ic" href="https://github.com/jim380/Coris" target=" ">
                   <i class="fab fa-github"> </i>
                 </a>
               </li>
               <li>
-                <a class="icons-sm pin-ic">
+                <a class="icons-sm pin-ic" href="https://twitter.com/cypher_core" target=" ">
                   <i class="fab fa-twitter"> </i>
                 </a>
               </li>
               <li>
-                <a class="icons-sm gplus-ic">
+                <a class="icons-sm gplus-ic" href="https://t.me/cyphercore" target=" ">
                   <i class="fab fa-telegram"> </i>
                 </a>
               </li>
               <li>
-                <a class="icons-sm tw-ic">
+                <a class="icons-sm tw-ic" href="https://www.linkedin.com/company/cypher-core/about/?viewAsMember=true" target=" ">
                   <i class="fab fa-linkedin"> </i>
                 </a>
               </li>
@@ -147,7 +147,7 @@
         <mdb-navbar-brand>
           <!-- Breadcrumb-->
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-            <a href="#"><h1 class="brand-nav">Coris</h1></a>
+            <a [routerLink]="['/validators']"><h1 class="brand-nav">Coris</h1></a>
             <mat-chip-list class="alpha-chip">
                 <!-- <mat-chip color = "accent">
                   alpha
@@ -193,9 +193,9 @@
                 <h3 class="clearfix d-none d-sm-inline-block">Network</h3>
               </a>
               <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
-                <a class="dropdown-item" href="#">MainNet</a>
-                <a class="dropdown-item" href="#">Testnet</a>
-                <a class="dropdown-item" href="#">Something else</a>
+                <a class="dropdown-item">MainNet</a>
+                <a class="dropdown-item">Testnet</a>
+                <a class="dropdown-item">Stay tuned</a>
               </div>
             </li>
           </ul>
