--- a/src/app/components/navigation/sidenav/sidenav.component.scss
+++ b/src/app/components/navigation/sidenav/sidenav.component.scss
@@ -25,10 +25,11 @@ h5 .mb-0 {
   color:#FFC107;
 }
 
-mdb-accordion-item-head h5 {
-  padding: 0;
-}
-
 .alpha-chip {
   margin-left: 10px; 
+}
+
+a:hover,
+a:active {
+    text-decoration: none; 
 }
