--- a/src/app/components/governance/gov-detail/gov-detail.component.scss
+++ b/src/app/components/governance/gov-detail/gov-detail.component.scss
@@ -51,8 +51,12 @@ li {
     font-size: 130%;
 }
 
-mdb-card-title {
+.card-title h5 {
     color: black;
+}
+
+mdb-card-title {
+  color: white;
 }
   
 mdb-card-header {
