--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -29,7 +29,7 @@
         <div class="card card-cascade cascading-admin-card">
             <!--Card Data-->
             <div class="admin-up">
-                <mdb-icon fas icon="chart-line" class="indigo"></mdb-icon>
+                <mdb-icon fas icon="{{card.icon}}" class="indigo" size="lg"></mdb-icon>
                 <div class="data">
                     <p>{{card.title}}</p>
                     <h4><strong>{{card.data}}</strong></h4>
