--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -162,26 +162,26 @@
         <navlinks>
           <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active-list-item">
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active">
                 <i class="fa fa-users"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Validator</h3>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/blocks" routerLinkActive="active-list-item">
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/blocks" routerLinkActive="active">
                 <i class="fa fa-cubes"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Blocks</h3>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/txs" routerLinkActive="active-list-item">
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/txs" routerLinkActive="active">
                 <i class="fa fa-tasks"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Transactions</h3>
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="/gov" routerLinkActive="active-list-item">
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/gov" routerLinkActive="active">
                 <i class="fa fa-university"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Governance</h3>
               </a>
