--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -128,7 +128,7 @@
         </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
+      <tr mat-header-row *matHeaderRowDef="getDisplayedColumns(); sticky: true"></tr>
       <tr mat-row 
           *matRowDef="let validator; columns: getDisplayedColumns();"
           [appBgHighlight]="'#d1d1d1'" 
