--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -50,7 +50,9 @@
         <canvas baseChart
           [datasets]="scatterChartData"
           [options]="scatterChartOptions"
-          [chartType]="scatterChartType">
+          [chartType]="scatterChartType"
+          [labels]="scatterChartLabels"
+          [colors]="scatterChartColors">
         </canvas>
       </div>
       <mdb-card-body class="text-center">
